# Telegram-bot-words-game

./: .dockerignore  .env_dev  .flake8  .gitignore  Dockerfile  README.md  aiohttp_app_main.py  alembic.ini  config.yml  docker-compose.yml  docker-compose_monolit.yaml  init-kts-db.sh  main.py  pyproject.toml  requirements.txt  starter.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yaml
.temp/: config.yml
.temp/quiz/: accessor.py
.temp/quiz_accessor/: models.py  views.py
app/admin/: models.py  schemes.py  views.py
app/poller_app/: constnant.py  main.py  poller.py  run.sh
app/quiz/: models.py  schemes.py  views.py
app/sender/: messages.py  sender.py
app/sender_app/: main.py  messages.py  sender.py
app/store/: __init__.py
app/web/: app.py  config.py  decorators.py  middlewares.py  routes.py
app/words_game/: models.py  routes.py  schemes.py  views.py
app/worker_app/: bot_echo.py  constant.py  main.py  worker.py  worker_app.py
compose/: builder.Dockerfile
compose/aiohttp_web/: Dockerfile
compose/poller/: Dockerfile
compose/sender/: Dockerfile
compose/worker/: Dockerfile
migrations/: env.py
migrations/versions/: 0eb1c9274ed1_initial.py  120b334a60ea_replace_str_to_list_str_in_gamesession.py  1b08801ba534_remove_relationship_region_and_country.py  1f9342abec42_gamesession_add_chat_id_and_type.py  1fe91cbdaf6b_create_game_settings.py  2748a52adac5_add_point_and_round.py  281f779aaf59_remove_user_id_to_users.py  52c6200e6487_add_used_city_mtm_and_first_letter_and_.py  554e4954eedd_city_country_region.py  5e5be1d7003e_add_user_id_to_users.py  680d80f5e477_rename_team_rename_column_in_status_add_.py  6f03b8ff38a4_add_settings_to_session.py  732604326100_exchange_int_to_bigint.py  9e5c6abfb6c4_rename_user_to_creator.py  bd75d43a5e03_add_poll_id_to_game_session.py  c1e82216ea0b_change_poll_id_to_bigint.py  ce90867f5d16_add_poll_answer_to_player.py  cfc7e26c24d9_city_country_region1.py  e58e24333578_add_life_to_settings.py  f9989935b482_remove_region_and_country.py  fa1429681ed3_replace_list_to_str_from_words.py
old_tests/managers/: test_login.py
old_tests/quiz/: test_question.py  test_theme.py
tests/: config.yml  conftest.py  utils.py
tests/bot/: test_bot_manager.py
tests/fixtures/: common.py
tests/poller/: fixtures.py  test_poller.py
tests/quiz/: test_question.py  test_theme.py
tests/rabbitMQ/: test_rabbit.py  test_rabbitMQ.py
(+29 files in other folders)
