[tool.poetry]
name = "hw-backend-summer-2023-1-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Feraclin <feraclin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
python-dotenv = '*'
asyncpg = '*'
alembic = "*"
aiohttp='*'
aiohttp-apispec='*'
aiohttp-session='*'
aiosignal='*'
pycparser='*'
pyparsing='*'
pytest='*'
pytest-aiohttp='*'
pytest-asyncio='*'
pytest-cov='*'
pytest-mock='*'
python-dateutil='*'
marshmallow = "^3.19.0"
pyyaml = "^6.0"
cryptography = '*'
aiohttp-devtools = "^1.0.post0"
marshmallow-dataclass = "^8.5.11"
bson = "^0.5.10"
aio-pika = "^8.3.0"
translate = "^3.6.1"
black = "^23.1.0"
rabbitmq = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''